# raios

./: .gitignore  AGENTS.md  AI_Build_and_Test_Runbook.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  log.md  usb-format-fat32.diskpart  usb-gpt-esp.diskpart  usb-remount-d.diskpart  usb-set-esp.diskpart  usb-temp-mount-basic.diskpart
fake-cloud/server/: Cargo.toml
ota/cli/: Cargo.toml
seed-kernel/: Cargo.toml  README.md  build.rs  linker.ld  rust-toolchain.toml  x86_64-seed.json
seed-kernel/.cargo/: config.toml
seed-kernel/limine/: limine.cfg  limine.conf
seed-kernel/src/: agent_protocol.rs  agent_protocol_memory.rs  agent_protocol_module_approval.rs  agent_protocol_module_attestation.rs  agent_protocol_module_audit.rs  agent_protocol_module_grant.rs  agent_protocol_module_load_gate.rs  agent_protocol_module_load_gate_render.rs  agent_protocol_module_load_gate_selftest.rs  agent_protocol_module_load_gate_selftest_emit.rs  agent_protocol_module_load_gate_selftest_eval.rs  agent_protocol_module_load_gate_selftest_reference_cases.rs  agent_protocol_module_loader_artifact_hash_binding.rs  agent_protocol_module_loader_fact.rs  agent_protocol_module_loader_identity.rs  agent_protocol_module_loader_runtime.rs  agent_protocol_module_reference.rs  agent_protocol_module_service_slot.rs  agent_protocol_module_service_slot_allocator.rs  agent_protocol_module_types.rs  agent_protocol_module_write_boundary.rs  agent_protocol_module_write_boundary_append_contract.rs  agent_protocol_module_write_boundary_append_engine.rs  agent_protocol_module_write_boundary_append_intent.rs  agent_protocol_module_write_boundary_append_payload_hash.rs  agent_protocol_module_write_boundary_availability.rs  (+89 more)
(+111 files in other folders)
