[package]
name = "seed-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seed-kernel"
path = "src/main.rs"

[dependencies]
limine = "0.5"
linked_list_allocator = "0.10"
smoltcp = { version = "0.10", default-features = false, features = ["proto-ipv4", "socket-udp", "socket-tcp", "socket-dhcpv4", "socket-dns", "medium-ethernet", "alloc"] }
spin = "0.9"
uart_16550 = "0.2"
x86_64 = { version = "0.14", default-features = false, features = ["instructions"] }
