[package]
name = "ota-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "1", features = ["rand", "serde"] }
hex = "0.4"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
